@@ -1679,7 +1679,7 @@
           {
             "id": 134,
             "display_flags": 0,
-            "classifier_name": "c1",
+            "classifier_name": "c long long long long long long name 1",
             "node": "4b0569c9-c116-45c1-a3f0-84fba2b9a325",
             "uuid": "e2376245-f63e-4462-a6f3-fedf441edebf"
           },
@@ -1880,7 +1880,7 @@
           {
             "id": 154,
             "display_flags": 0,
-            "classifier_name": "c1",
+            "classifier_name": "c long long long long long long name 1",
             "node": "5009be89-8b3d-4b23-9dca-55d7c8cd406f",
             "uuid": "844060b8-8765-4633-ae2e-d9f5c7dfd73f"
           },
@@ -1949,7 +1949,7 @@
           {
             "id": 160,
             "display_flags": 0,
-            "classifier_name": "c1",
+            "classifier_name": "c long long long long long long name 1",
             "node": "74a350dc-2f51-422a-9916-a37dd6744c60",
             "uuid": "a312ef1f-6875-4d24-b640-42975a133e33"
           },
@@ -2025,7 +2025,7 @@
           {
             "id": 166,
             "display_flags": 0,
-            "classifier_name": "c1",
+            "classifier_name": "c long long long long long long name 1",
             "node": "ac33c72a-5389-4d2e-bb6e-ba15969e771c",
             "uuid": "dcc2712e-8807-4bbc-a43c-a82c19dff30a"
           },
@@ -2101,7 +2101,7 @@
           {
             "id": 172,
             "display_flags": 0,
-            "classifier_name": "c1",
+            "classifier_name": "c long long long long long long name 1",
             "node": "4b0569c9-c116-45c1-a3f0-84fba2b9a325",
             "uuid": "6ad2791b-1e00-46a2-ae92-50d4223754de"
           },
@@ -2177,7 +2177,7 @@
           {
             "id": 178,
             "display_flags": 0,
-            "classifier_name": "c1",
+            "classifier_name": "c long long long long long long name 1",
             "node": "4b0569c9-c116-45c1-a3f0-84fba2b9a325",
             "uuid": "a2b30cf5-c7fa-4d55-95d5-bc63a167f35f"
           },
@@ -4370,16 +4370,16 @@
     {
       "classifier": {
         "id": 41,
-        "main_type": 125,
-        "type": "Class",
+        "main_type": 100,
+        "type": "Actor",
         "stereotype": "",
-        "name": "c1",
+        "name": "c long long long long long long name 1",
         "description": [
                 ""
         ],
         "x_order": -1403039051,
         "y_order": -1217596004,
-        "list_order": -1217596004,
+        "list_order": -1824289807,
         "uuid": "4b0569c9-c116-45c1-a3f0-84fba2b9a325",
         "features":
         [
@@ -4434,7 +4434,7 @@
         ],
         "x_order": 151588942,
         "y_order": -1512788422,
-        "list_order": -1764462794,
+        "list_order": 1358549590,
         "uuid": "dfec613d-4d0b-4935-af4f-a2b067f74e15",
         "features":
         [
@@ -4591,7 +4591,7 @@
         ],
         "x_order": -1403039051,
         "y_order": -2073720164,
-        "list_order": -2114304329,
+        "list_order": -1351767431,
         "uuid": "636abbd6-ab66-481b-a18f-701a3be4b5fb",
         "features":
         [
@@ -6467,7 +6467,7 @@
                 ""
         ],
         "list_order": 229376,
-        "from_classifier_name": "c1",
+        "from_classifier_name": "c long long long long long long name 1",
         "to_classifier_name": "c5",
         "from_node": "4b0569c9-c116-45c1-a3f0-84fba2b9a325",
         "to_node": "636abbd6-ab66-481b-a18f-701a3be4b5fb",
@@ -6484,7 +6484,7 @@
                 ""
         ],
         "list_order": 262144,
-        "from_classifier_name": "c1",
+        "from_classifier_name": "c long long long long long long name 1",
         "to_classifier_name": "c2",
         "from_node": "4b0569c9-c116-45c1-a3f0-84fba2b9a325",
         "to_node": "dfec613d-4d0b-4935-af4f-a2b067f74e15",
@@ -6501,7 +6501,7 @@
                 ""
         ],
         "list_order": 207711603,
-        "from_classifier_name": "c1",
+        "from_classifier_name": "c long long long long long long name 1",
         "from_feature_key": "",
         "to_classifier_name": "c2",
         "to_feature_key": "",
@@ -6520,7 +6520,7 @@
                 ""
         ],
         "list_order": 1294521750,
-        "from_classifier_name": "c1",
+        "from_classifier_name": "c long long long long long long name 1",
         "from_feature_key": "",
         "to_classifier_name": "c6",
         "to_feature_key": "",
@@ -6539,7 +6539,7 @@
                 ""
         ],
         "list_order": -1279274884,
-        "from_classifier_name": "c1",
+        "from_classifier_name": "c long long long long long long name 1",
         "from_feature_key": "",
         "to_classifier_name": "gray",
         "to_feature_key": "",
@@ -6809,7 +6809,7 @@
         ],
         "list_order": 196608,
         "from_classifier_name": "c6",
-        "to_classifier_name": "c1",
+        "to_classifier_name": "c long long long long long long name 1",
         "from_node": "590f0dab-fc3a-4cfb-9f62-6417bfade2f5",
         "to_node": "4b0569c9-c116-45c1-a3f0-84fba2b9a325",
         "uuid": "c7f0bf32-415c-4299-a84a-98c4fdcf8d90"
@@ -6903,7 +6903,7 @@
         "list_order": 1294620054,
         "from_classifier_name": "c6",
         "from_feature_key": "",
-        "to_classifier_name": "c1",
+        "to_classifier_name": "c long long long long long long name 1",
         "to_feature_key": "",
         "from_node": "d8836620-cb35-453e-917c-3d223120aa1c",
         "to_node": "5009be89-8b3d-4b23-9dca-55d7c8cd406f",
@@ -7598,10 +7598,10 @@
         "description": [
                 ""
         ],
-        "list_order": -1164516184,
+        "list_order": -1039724353,
         "from_classifier_name": "gray",
         "from_feature_key": "",
-        "to_classifier_name": "c1",
+        "to_classifier_name": "c long long long long long long name 1",
         "to_feature_key": "",
         "from_node": "a808b055-01cf-4ccc-8d5d-d791cc6cf247",
         "to_node": "74a350dc-2f51-422a-9916-a37dd6744c60",
